--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "timeago": "^1.6.7",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http:localhost:8800/api"
+  "proxy": "http://localhost:8800/api"
 }
